override removed from cropping version to fix small white padding bel… (#88)
* override removed from cropping version to fix small white padding below image

* package version bump

--- a/src/components/hero/_hero.scss
+++ b/src/components/hero/_hero.scss
@@ -100,13 +100,6 @@
         margin: 0;
     }
 
-    .great-ds-hero--large-image-cropping & {
-        @include govuk-media-query($from: desktop) {
-            display: block;
-            height: 100%;
-        }
-    }
-      
     .great-ds-hero--large-image-scaling & {
         @include govuk-media-query($from: desktop) {
             max-height: 355px;
